--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -66,21 +66,21 @@ This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
 It is Bayesian in that I arrive at conclusions based on data using probability models.
 
-(ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used by the @ihme2019 vary depending on severity of the condition.
+(ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary depending on severity of the condition.
 
 ```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-HIV is the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older [@ihme2019; Figure \@ref(fig:gbd)].
-Using statistics to quantify the epidemic is an important part of the public health response, and the path towards disease control and elimination.
-However, there are substantial challenges involved in obtaining suitable estimates of relevant indicators.
+HIV is the largest cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
+Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination.
+However, there are substantial challenges in obtaining suitable estimates of relevant indicators needed to mount this response.
 
-The estimates in this thesis are based on data recorded from national household surveys or routinely collected from healthcare facilities.
-An important feature of this data is its location and the time at which it was collected.
+The data I use are recorded from national household surveys or routinely collected from healthcare facilities.
+An important feature of this data is its location and the time at which it was recorded.
 While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
-As such, I draw on modelling techniques from spatio-temporal statistics.
+As a result, the work in this thesis makes use of modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, as well as the thesis itself, is accompanied by R code, hosted on GitHub.
@@ -89,16 +89,16 @@ Each project in this thesis, as well as the thesis itself, is accompanied by R c
 
 The structure of this thesis (Figure \@ref(fig:chapter-flowchart)) is as follows:
 
-* Chapter \@ref(hiv-aids): I begin by providing background on the HIV/AIDS epidemic, as well as describing the challenges faced by surveillance efforts.
+* Chapter \@ref(hiv-aids): I begin by providing an overview of the HIV/AIDS epidemic, and describing the challenges faced by disease surveillance efforts.
 * Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
-* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind.
-In disease mapping, we work using the districts of a country, which are not a grid.
+* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was intended to analyse a grid of pixels.
+In disease mapping, we work using the districts of a country, which are typically not a grid.
 I evaluate the practical consequences of this this concern [@howes2023beyond].
 * Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection.
 The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
 I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
-With this motivation, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
+With this model in mind, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
 I apply the method to data from Malawi, and analyse the consequences of inference method choice for policy relevant outcomes.
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
