--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -84,8 +84,7 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 <!-- The effort has translated into progress -->
 Implementation of HIV prevention and treatment options have had a substantial impact on the course of the epidemic.
 As a result, the number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \@ref(fig:overall-picture)).
-I describe the most significant of these options below.
-
+I describe the most significant of these options below:
 
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
 A person living with HIV who takes ART daily can live a full and healthy life, transforming what was once a terminal illness to a treatable chronic condition.
@@ -151,33 +150,38 @@ Important indicators include:
 
 * **HIV prevalence** is the proportion $\rho \in [0, 1]$ of the population who have HIV, typically written as a percentage.
 Both new infections and more PLHIV remaining alive by taking treatment result in an increase in HIV prevalence.
-As such, HIV prevalence should not be interpreted in isolation, and is primarily used indirectly to calculate other indicators, rather than directly in policy.
-In some circumstances, when other indicators are difficult to estimate, HIV prevalence can be a useful proxy.
+As such, HIV prevalence should not be interpreted in isolation, and is primarily used indirectly to calculate other indicators.
+That said, in some circumstances when other indicators are difficult to estimate, HIV prevalence can be a useful proxy.
 The number of PLHIV is given by $N\rho$, where $N$ is the population size.
 * **HIV incidence** is the rate $\lambda \in \mathbb{R}$ of new HIV infections, typically written as number of new infections per 1000 person years.
-HIV incidence can be specified in terms of HIV prevalence by $\lambda = N\Delta\rho$, where $\Delta\rho$ is the change in HIV prevalence over some time period.
+HIV incidence can be specified in terms of the change in HIV prevalence over some time period $\lambda = \Delta \rho / \Delta t$.
 Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence.
+The number of new HIV infections is given by $N \lambda$.
 * **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART, typically written as a percentage.
-Estimates of ART coverage play a direct role in provision of treatment services.
+Estimates of ART coverage play a direct role in the provision of treatment services.
+The number of people taking ART is given by $N \alpha$.
+
+<!-- * **Recently infected** -->
+<!-- * **Awareness of status** -->
 
 <!-- Key data sources used to inform these indicators are: household surveys, programmatic data -->
 
 ### Challenges
 
-Obtaining reliable, timely, estimates of these indicators at an appropriate spatial resolution is challenging.
-Among the most significant difficulties are:
+Obtaining estimates of these indicators which are reliable, timely, and at an appropriate spatial resolution is challenging.
+Among the most significant difficulties faced are:
 
 1. **Data sparsity**
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
-For example, in many countries the last household survey conducted is several years out of date.
+For example, in many countries the last conducted household survey is several years out of date.
 4. **Missing data**
-The sampling frame may not correspond to the target population.
+The sampling frame of a survey may not correspond to the target population.
 For example, many KPs are difficult to reach, and may be ommited from sampling frames.
 Individuals included on the sampling frame may choose not to respond.
 All surveys are subject to sampling error, as only a subset of the target population are sampled.
-Each of these issues can be characterised as being due to missing data.
-I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
+Each of these issues can be characterised as being problems of missing data.
+I characterise missing data as referring to the shortfalls of any given study, and data sparsity as referring to limited availability of studies. 
 3. **Survey biases**
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
 When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
@@ -185,19 +189,22 @@ When available, biomarker data can be used to overcome under-reporting, but stil
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
 Accurately estimating population denominators is itself a challenging task [@tatem2017worldpop].
 Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
-5. **Reliance on epidemiological parameters**
+5. **Inconsistent data collection and reporting**
+The types of data that are collected might vary across space and time.
+Reporting protocols or definitions can also change.
+6. **Reliance on epidemiological parameters**
 Indicators rely on estimates of epidemiological parameters such as rates of disease progression.
 These parameters are typically obtained from cohort studies and may not generalise to the setting of interest.
 Further, they are typically applied coarsely, and without proper accounting for uncertainty.
 
 ### Statistical approaches
 
-The challenges above make direct interpretation of the data often misleading.
-Careful statistical modelling is required to overcome these limitations.
+The challenges above make it direct interpretation of the data often misleading.
+Careful statistical modelling is required to overcome these limitations as best is possible.
 
 1. **Borrowing information**
 When little direct data is available, data judged to be indirectly related can be used to help improve estimation.
-For example, if limited data is available for men aged 30-34 is a particular country, it is likely reasonable to make use of the data for men aged 35-39.
+For example, if limited data is available for individuals of a certain age is a particular country, it is likely reasonable to make use of the data for individuals of a similar age in that country.
 As well as over age groups, information can be borrowed between and within countries, and across times. 
 2. **Evidence synthesis**
 Multiple sources of evidence can be combined to overcome the limitations of any one data source.
@@ -208,7 +215,6 @@ Ensuring the quality of any data used in the estimation process is essential.
 
 ### Future directions
 
-Aims for HIV response going forward, and the surveillance capabilities needed to meet them.
+Aims for HIV response going forward, and the surveillance capabilities needed to meet them:
 
-1. **Greater reliance on routine health system data** It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. Patient-level HIV data systems [@world2017consolidated]. Case-based surveillance (CBS).
-2. **Integration of HIV services with other health programs** Strengthen health systems.
+1. **Greater reliance on routine health system data** It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. Patient-level HIV data systems [@world2017consolidated] and case-based surveillance (CBS). Integration of HIV services with other health programs and strengthening of health systems.
