--- a/references.bib
+++ b/references.bib
@@ -1391,3 +1391,52 @@ doi = {10.1201/9781420072884-c30}
   journal={arXiv preprint arXiv:2103.10522},
   year={2021}
 }
+
+@article{blei2017variational,
+  title={Variational inference: A review for statisticians},
+  author={Blei, David M and Kucukelbir, Alp and McAuliffe, Jon D},
+  journal={Journal of the American statistical Association},
+  volume={112},
+  number={518},
+  pages={859--877},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{roberts2004general,
+  title={General state space Markov chains and MCMC algorithms},
+  author={Roberts, Gareth O and Rosenthal, Jeffrey S},
+  year={2004}
+}
+
+@article{giordano2018covariances,
+  author  = {Ryan Giordano and Tamara Broderick and Michael I. Jordan},
+  title   = {Covariances, Robustness, and Variational Bayes},
+  journal = {Journal of Machine Learning Research},
+  year    = {2018},
+  volume  = {19},
+  number  = {51},
+  pages   = {1--49},
+  url     = {http://jmlr.org/papers/v19/17-670.html}
+}
+
+@inproceedings{minka2001expectation,
+  title={{Expectation Propagation for approximate Bayesian inference}},
+  author={Minka, Thomas P},
+  booktitle={Proceedings of the 17th Conference in Uncertainty in Artificial Intelligence},
+  pages={362--369},
+  year={2001}
+}
+
+
+@article{dempster1977maximum,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  journal={Journal of the royal statistical society: series B (methodological)},
+  volume={39},
+  number={1},
+  pages={1--22},
+  year={1977},
+  publisher={Wiley Online Library}
+}
+
+
