--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -12,6 +12,10 @@ documentclass: book
 bibliography: references.bib
 ---
 
+```{r}
+resource_version <- "temp"
+```
+
 # Models for spatial structure {#beyond-borders}
 \adjustmtc
 \markboth{Models for spatial structure}{}
@@ -113,6 +117,24 @@ The Besag model was originally proposed for use in image analysis, where areas c
 Since then, it has seen wider use, including in situations, like small-area estimation of HIV, where the spatial structure is less regular.
 As such, I have a number of concerns about the model's applicability to this broader setting.
 This discussion is closely linked to the modifiable areal unit problem [@openshow1979million], whereby statistical conclusions change as a result of seemingly arbitrary changes in data aggregation, as well as the challenge of ecological inference and the ecological fallacy [@wakefield2010aggregation].
+
+(ref:maup1) Figure caption.
+
+```{r maup1, fig.cap="(ref:maup1)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/maup1.pdf"))
+```
+
+(ref:maup2) Figure caption.
+
+```{r maup2, fig.cap="(ref:maup2)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/maup2.pdf"))
+```
+
+(ref:maup3) Figure caption.
+
+```{r maup3, fig.cap="(ref:maup3)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/maup3.pdf"))
+```
 
 #### Adjacency compression
 
